--- a/style.css
+++ b/style.css
@@ -9,3 +9,17 @@ h3 { font-size: 1.2em; }
 table { margin-top: 0.75em; }
 th { font-size: 1.2em; text-align: left; border: none; padding-left: 0; }
 td { padding: 0.25em 2em 0.25em 0em; border: 0 none; }
+nav ul {
+    padding: 0;
+    margin: 0;
+}
+nav li {
+    display: inline-block;
+    background: black;
+}
+nav a {
+    display: inline-block;
+    color: white;
+    padding: 5px;
+    text-decoration: none;
+}
